# bm25-index-tool

./: .gitleaks.toml  .mise.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
bm25_index_tool/: __init__.py  api.py  cli.py  completion.py  logging_config.py  utils.py
bm25_index_tool/commands/: __init__.py  batch_query.py  create.py  delete.py  history.py  info.py  list.py  list_models.py  query.py  stats.py  update.py
bm25_index_tool/config/: __init__.py  manager.py  models.py
bm25_index_tool/core/: __init__.py  cache.py  file_discovery.py  filters.py  formatters.py  fragments.py  fusion.py  history.py  incremental.py  indexer.py  merge_strategies.py  related.py  searcher.py
bm25_index_tool/storage/: __init__.py  paths.py  registry.py  sqlite_storage.py
bm25_index_tool/telemetry/: __init__.py  config.py  decorators.py  exporters.py  service.py
bm25_index_tool/vector/: __init__.py  chunking.py  embeddings.py  errors.py  image_processor.py  indexer.py  searcher.py
examples/: api_example.py
plugins/bm25-index-tool/.claude-plugin/: plugin.json
plugins/bm25-index-tool/commands/: help.md
plugins/bm25-index-tool/skills/bm25-index-tool/: SKILL.md
references/: README.md  architecture.md  development.md  docker-compose.yml  marketplace-plugin-guide.md  memory.md  shell-completion.md  telemetry.md
references/alloy/: config.alloy
references/grafana/provisioning/datasources/: datasources.yml
references/loki/: loki-config.yml
references/prometheus/: prometheus.yml
references/tempo/: tempo.yml
tests/: __init__.py  conftest.py  test_api.py  test_file_discovery.py  test_fts5_escape.py  test_utils.py
